// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable.TableBatchActions should render 1`] = `
<TableBatchActions
  className="custom-class"
  onCancel={[MockFunction]}
  shouldShowBatchActions={false}
  totalSelected={10}
  translateWithId={[Function]}
>
  <div
    className="bx--batch-actions custom-class"
  >
    <div
      className="bx--batch-summary"
    >
      <p
        className="bx--batch-summary__para"
      >
        <span>
          10 items selected
        </span>
      </p>
      <button
        className="bx--batch-summary__cancel"
        onClick={[MockFunction]}
      >
        Cancel
      </button>
    </div>
  </div>
</TableBatchActions>
`;

exports[`DataTable.TableBatchActions should render 2`] = `
<TableBatchActions
  className="custom-class"
  onCancel={[MockFunction]}
  shouldShowBatchActions={true}
  totalSelected={10}
  translateWithId={[Function]}
>
  <div
    className="bx--batch-actions bx--batch-actions--active custom-class"
  >
    <div
      className="bx--batch-summary"
    >
      <p
        className="bx--batch-summary__para"
      >
        <span>
          10 items selected
        </span>
      </p>
      <button
        className="bx--batch-summary__cancel"
        onClick={[MockFunction]}
      >
        Cancel
      </button>
    </div>
  </div>
</TableBatchActions>
`;
